<resources>
    <string name="app_name">RowsOfColor</string>
    <string name="color_yasi">یاسی</string>
    <string name="color_blue_dark">آبی پررنگ</string>
    <string name="color_turquoise_blue">آبی فیروزه ای</string>
    <string name="color_beauty_red">قرمز</string>
    <string name="color_beauty_yellow">زرد خردلی</string>
    <string name="color_beauty_purple">بنفش</string>
    <string name="color_beauty_green">سبز روشن</string>
    <string name="color_beauty_pink">صورتی کثیف</string>
    <string name="color_beauty_pink_light">صدفی</string>
    <string name="color_beauty_purple_light">بنفش روشن</string>
    <string name="color_beauty_so_pl">بنفش خیلی روشن</string>
    <string name="color_brown"> بادمجانی</string>
    <string name="color_beauty_blue">آبی آسمانی</string>
    <string name="color_orange">نارنجی</string>
</resources>