<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/box_0"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/beauty_yellow"
                android:fontFamily="@font/b_titr"
                android:gravity="center_horizontal"
                android:padding="12dp"
                android:text="@string/color_beauty_yellow"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/box_1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/turquoise_blue"
                android:text="@string/color_turquoise_blue"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/box_2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/beauty_green"
                android:text="@string/color_beauty_green"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/box_3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/beauty_pink"
                android:text="@string/color_beauty_pink"
                android:gravity="center_horizontal"  />

            <TextView
                android:id="@+id/box_4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/beauty_purple_light"
                android:text="@string/color_beauty_purple_light"
                android:gravity="center_horizontal"  />

            <TextView
                android:id="@+id/box_5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/brown"
                android:text="@string/color_brown"
                android:gravity="center_horizontal"  />
            <TextView
                android:id="@+id/box_6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/beauty_pink_light"
                android:text="@string/color_beauty_pink_light"
                android:gravity="center_horizontal"  />


            <TextView
                android:id="@+id/box_7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/yasi"
                android:text="@string/color_yasi"
                android:gravity="center_horizontal"  />

            <TextView
                android:id="@+id/box_8"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/beauty_blue"
                android:text="@string/color_beauty_blue"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/box_9"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/beauty_red"
                android:text="@string/color_beauty_red"
                android:gravity="center_horizontal"  />
            <TextView
                android:id="@+id/box_10"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/orange"
                android:text="@string/color_orange"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/box_11"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/b_titr"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:padding="12dp"
                android:background="@color/blue_dark"
                android:text="@string/color_blue_dark"
                android:gravity="center_horizontal"  />
        </LinearLayout>
    </ScrollView>

    <!-- android:padding="10dp"-->

</LinearLayout>